--- a/style.css
+++ b/style.css
@@ -2,6 +2,72 @@
 html { box-sizing: border-box; }
 *, ::after, ::before { box-sizing: inherit; }
 
+body{
+  background-color: #b2bec3;
+  font-family: 'Nunito';
+  margin: 0;
+}
+
+.vizitka{
+  text-align: justify;
+  padding: 30px;
+  margin: 150px 25% 0 25%;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 5px 5px 10px rgba(0,0,0,0.3);
+  width: 550px;
+  position:relative;
+}
+
+
+.text{
+  margin:30px 0 30px 0
+}
+
+img{
+  width: 150px;
+  border-radius: 50%;
+  border: 3px solid white;
+  position: absolute;
+  top: -75px;
+  right: -75px;
+  box-shadow: 5px 5px 10px rgba(0,0,0,0.3);
+}
+
+h1{
+  color: #d63031;
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+  line-height: 36px;
+}
+
+p{
+  font-size: 18px;
+}
+
+a{
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  display: block;
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.Twitter{
+  background-color: #1da1f2;
+}
+
+.Facebook{
+  background-color: #3b5998;
+  margin-top: 5px;
+}
+
+
 /*
 BARVY:
 šedá na pozadí stránky:		 #b2bec3
