--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 .vizitka{
   text-align: justify;
   padding: 30px;
-  margin: 150px 25% 0 25%;
+  margin: 150px auto 0 auto;
   border-radius: 10px;
   background-color: white;
   box-shadow: 5px 5px 10px rgba(0,0,0,0.3);
@@ -24,7 +24,7 @@ body{
   margin:30px 0 30px 0
 }
 
-img{
+.fotoElisky{
   width: 150px;
   border-radius: 50%;
   border: 3px solid white;
@@ -34,7 +34,7 @@ img{
   box-shadow: 5px 5px 10px rgba(0,0,0,0.3);
 }
 
-h1{
+.nadpisEliska{
   color: #d63031;
   font-size: 36px;
   font-weight: bold;
@@ -46,7 +46,7 @@ p{
   font-size: 18px;
 }
 
-a{
+.tlacitko{
   font-size: 18px;
   font-weight: bold;
   text-transform: uppercase;
@@ -58,11 +58,19 @@ a{
   text-align: center;
 }
 
-.Twitter{
+.twitter:hover{
+  background-color: #0b7bc1;
+}
+
+.facebook:hover{
+  background-color: #2b406e;
+}
+
+.twitter{
   background-color: #1da1f2;
 }
 
-.Facebook{
+.facebook{
   background-color: #3b5998;
   margin-top: 5px;
 }
